feat(api): legend config center
